--- a/SmallLister.Web/SmallLister.Web.csproj
+++ b/SmallLister.Web/SmallLister.Web.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="BuildBundlerMinifier" Version="*" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.*" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.Abstractions" Version="5.0.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.*" Condition="'$(Configuration)' == 'Debug'" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.*" PrivateAssets="All"/>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.*" />
   </ItemGroup>
