Updated setting key to contain app name

--- a/SmallLister.Web/appsettings.Development.json
+++ b/SmallLister.Web/appsettings.Development.json
@@ -7,7 +7,7 @@
             "Microsoft": "Information"
         }
     },
-    "OpenId": {
+    "SmallListerOpenId": {
         "ClientSecret": ""
     }
 }
