--- a/SmallLister.Web/appsettings.json
+++ b/SmallLister.Web/appsettings.json
@@ -8,7 +8,7 @@
     "ConnectionStrings": {
         "SmallLister": "Data Source=smalllister.db"
     },
-    "OpenId": {
+    "SmallListerOpenId": {
         "ClientId": "smalllister",
         "ClientSecret": ""
     }
