Initial work on the external app integration

--- a/SmallLister.Web/appsettings.Development.json
+++ b/SmallLister.Web/appsettings.Development.json
@@ -9,5 +9,8 @@
     },
     "SmallListerOpenId": {
         "ClientSecret": ""
+    },
+    "SmallListerApiJwt": {
+        "SigningKey": "DisengagementMopePhosphatebuffersolution"
     }
 }
