--- a/SmallLister.Web/appsettings.json
+++ b/SmallLister.Web/appsettings.json
@@ -11,5 +11,10 @@
     "SmallListerOpenId": {
         "ClientId": "smalllister",
         "ClientSecret": ""
+    },
+    "SmallListerApiJwt": {
+        "SigningKey": "",
+        "Issuer": "https://smalllister.nosuchblogger.com",
+        "Audience": "https://smalllister.nosuchblogger.com"
     }
 }
