--- a/SmallLister.Web/SmallLister.Web.csproj
+++ b/SmallLister.Web/SmallLister.Web.csproj
@@ -6,11 +6,13 @@
   <ItemGroup>
     <PackageReference Include="BuildBundlerMinifier" Version="*" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.*" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.*" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.Abstractions" Version="5.0.*" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.*" Condition="'$(Configuration)' == 'Debug'" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.*" PrivateAssets="All"/>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.*" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.*" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SmallLister\SmallLister.csproj" />
