--- a/SmallLister.Web/SmallLister.Web.csproj
+++ b/SmallLister.Web/SmallLister.Web.csproj
@@ -10,8 +10,11 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.*" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.Abstractions" Version="5.0.*" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.*" Condition="'$(Configuration)' == 'Debug'" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.2.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="4.2.*" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.*" PrivateAssets="All"/>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="5.0.*" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.*" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.*" />
   </ItemGroup>
   <ItemGroup>
