--- a/SmallLister.Web/SmallLister.Web.csproj
+++ b/SmallLister.Web/SmallLister.Web.csproj
@@ -2,20 +2,21 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
+    <NoWarn>CA2254</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BuildBundlerMinifier" Version="*" />
-    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.*" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.*" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.*" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.*" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.Abstractions" Version="7.0.*" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.*" Condition="'$(Configuration)' == 'Debug'" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.0.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.1.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="5.1.*" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.*" PrivateAssets="All"/>
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.*" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.*" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.*" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.31.*" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SmallLister\SmallLister.csproj" />
