--- a/SmallLister.Tests/SmallLister.Tests.csproj
+++ b/SmallLister.Tests/SmallLister.Tests.csproj
@@ -7,9 +7,13 @@
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.18.*" />
     <PackageReference Include="FluentAssertions" Version="6.11.*" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.*" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.*" />
-    <PackageReference Include="xunit" Version="2.4.*" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.*" />
+    <PackageReference Include="xunit" Version="2.5.*" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.*">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Moq" Version="4.18.*" />
   </ItemGroup>
 
