--- a/SmallLister/SmallLister.csproj
+++ b/SmallLister/SmallLister.csproj
@@ -7,9 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.*" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.*"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.*" PrivateAssets="All"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.*" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.*">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.*"/>
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.*"/>
   </ItemGroup>
