--- a/SmallLister/SmallLister.csproj
+++ b/SmallLister/SmallLister.csproj
@@ -12,7 +12,9 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.*"/>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="7.0.*"/>
+    <PackageReference Include="Polly" Version="7.2.*" />
   </ItemGroup>
 
 </Project>
