Implement webauthn instead of openid

--- a/SmallLister.Web/appsettings.json
+++ b/SmallLister.Web/appsettings.json
@@ -1,4 +1,6 @@
 ﻿{
+    "FidoOrigins": "https://smalllister.nosuchblogger.com",
+    "FidoDomain": "smalllister.nosuchblogger.com",
     "Logging": {
         "IncludeScopes": false,
         "LogLevel": {
@@ -7,10 +9,6 @@
     },
     "ConnectionStrings": {
         "SmallLister": "Data Source=smalllister.db"
-    },
-    "SmallListerOpenId": {
-        "ClientId": "smalllister",
-        "ClientSecret": ""
     },
     "SmallListerApiJwt": {
         "SigningKey": "",
