--- a/SmallLister/SmallLister.csproj
+++ b/SmallLister/SmallLister.csproj
@@ -13,7 +13,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.*"/>
-    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.*" />
     <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.*"/>
     <PackageReference Include="Polly" Version="8.2.*" />
   </ItemGroup>
