--- a/SmallLister.Web.Tests/SmallLister.Web.Tests.csproj
+++ b/SmallLister.Web.Tests/SmallLister.Web.Tests.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <Nullable>enable</Nullable>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
@@ -8,11 +8,13 @@
   <ItemGroup>
     <PackageReference Include="AutoFixture" Version="4.18.*" />
     <PackageReference Include="FluentAssertions" Version="6.12.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.*" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.*" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.*" />
     <PackageReference Include="Moq" Version="4.20.*" />
-    <PackageReference Include="xunit" Version="2.7.*" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.*">
+    <PackageReference Include="System.Net.Http" Version="4.3.*" />
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.*" />
+    <PackageReference Include="xunit" Version="2.9.*" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.*">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
